Fix overflow

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -48,6 +48,7 @@
     > div > div:last-of-type {
         padding-left: 1rem;
         border-left: 1px solid $border-color;
+        overflow: hidden;
     }
 }
 
